name:                lens-export
version:             0.1.0.0
synopsis:            Lens exporting example code
description:         Please see README.md
homepage:            https://github.com/wiggly/lens-export#readme
license:             BSD3
license-file:        LICENSE
author:              Nigel Rantor
maintainer:          wiggly@wiggly.org
copyright:           2016 Nigel Rantor
category:            Unclassified
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Donkey, Rabbit
  build-depends:       base >= 4.7 && < 5
                     , lens
  default-language:    Haskell2010

executable lens-export
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lens-export
                     , mtl
                     , bytestring
                     , text
                     , time
                     , lens
  default-language:    Haskell2010

test-suite lens-export-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lens-export
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wiggly/lens-export
